--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.0.0",
     "react-scripts": "4.0.3",
     "swr": "^1.0.1",
     "web-vitals": "^1.1.2"
