--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@react-spring/web": "^9.3.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@use-gesture/react": "^10.1.4",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
